--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("./components/auth/styles/styles.css"); /* AUTH STYLES (LOGIN / REGISTER PAGES)*/
 @import url("./components/Layout/styles/styles.css"); /* LAYOUT STYLES (NAV)*/
 
 * {
@@ -11,7 +13,8 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  background-color: #f3f0f0;
 }
 
 ul {
