--- a/client/src/components/auth/styles/styles.css
+++ b/client/src/components/auth/styles/styles.css
@@ -8,7 +8,7 @@
 
 section.section__auth-img {
   height: 250px;
-  background-image: url("./../../../../public/assets/auth-image.avif");
+  background-image: url("./../../../../public/assets/auth-image.png");
   background-size: cover;
   background-position: center;
   margin-bottom: 2rem;
